--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "mkdocs-social-buttons-plugin"
 version = "0.1"
 description = "Mkdocs plugin that generates inline social sharing buttons."
-keywords = "mkdocs social plugin"
-author = "Richard Forshaw"
-author_email = "richard@forshaw.org"
-url = "https://github.com/richardforshaw/mkdocs-social-buttons-plugin"
+keywords = ["mkdocs", "social", "sharing", "plugin"]
 # include_package_data=True,
-license = "MIT"
-python_requires = ">=3.7"
+requires-python = ">=3.7"
 classifiers= [
     "Development Status :: 5 - Production/Stable",
     "Programming Language :: Python :: 3",
@@ -22,15 +18,9 @@ classifiers= [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-install_requires=[
+dependencies=[
     "mkdocs>1.4",
 ]
 
-[mkdocs.plugins]
+[project.entry-points."mkdocs.plugins"]
 social-buttons = "mkdocs_social_buttons_plugin.plugin:SocialButtonsPlugin"
-
-# entry_points= {
-#     "mkdocs.plugins": [
-#         "social-buttons = mkdocs_social_buttons_plugin.plugin:SocialButtonsPlugin"
-#     ]
-# }
